//鹰眼注册接口
syntax = "proto3";
package hawkeye_register;

message register {
    enum Subject{
        Account = 0;
        Role = 1;
    }
    string game_cd = 1;
    Subject subject = 2;
    deviceInfo device_info = 3;
    userInfo  user_info = 4;
}

message deviceInfo{
    string adid = 1;
    string idfv = 2;
    string sm_id = 3;
    string imei = 4;
    string android_id = 5;
    string appsflyer_id = 6;
    string ip = 7;
    string device_token = 8;
}

message userInfo{
    string bundle_id = 1;
    string server_id = 2;
    string user_id = 3;
    string account = 4;
    string lv = 5;
    string vip = 6;
}

message register_resp {
    string request_id = 1; // 每次请求的唯一标识
    bool pass = 2;         // 是否通过校验，如果遭遇鹰眼内部错误，此值恒为true
    string err_code = 3;   // pass为false时，此处会传被拒绝原因。地址:TODO
    string err_msg = 4;    // 被拒绝原因的中文描述
}

service hawkeye_register_server {
    rpc hawkeye_register(register) returns(register_resp);
}
